[package]
name = "hsm2descriptors"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
license = "MIT"
description = "Converts c-lightning hsm_secret into an output descriptors"
repository = "https://github.com/RCasatta/hsm2descriptors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hkdf = "0.10.0"
hex = "0.4.2"
sha2 = "0.9"
bitcoin = "0.25.2"
structopt = "0.3.21"
